clusters/default/infra/platform/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: intikepri-minio
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-intikepri-rate-limit@kubernetescrd,
      kube-system-intikepri-security-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: intikepri-minio
    app.kubernetes.io/part-of: intikepri
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik
  rules:
    - host: minio.intikepri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intikepri-minio-minio-console
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: intikepri-minio
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-intikepri-rate-limit@kubernetescrd,
      kube-system-intikepri-security-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: intikepri-minio
    app.kubernetes.io/part-of: intikepri
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik
  rules:
    - host: s3.intikepri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intikepri-minio-minio
                port:
                  number: 9000
